--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* start main styles */
 :root {
     --main-color: #FAA8B6;
-    --sec-color: #807d7d;
+    --sec-color: #2c2b2b;
 
 }
 .text-mcolor{
@@ -9,12 +9,15 @@
 }
 html {
 
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
+   
     font-style: normal;
     scroll-behavior: smooth;
     scroll-padding-top: 93.5px;
     
+}
+p{
+    font-family: "Delius", cursive;
+    font-weight: 400;
 }
 
 h1,
@@ -133,6 +136,7 @@ p{
 .scroll-up{
     background-color: var(--main-color);
     color:white;
+    z-index: 5000;
 }
 nav{
     background-image: linear-gradient( 175deg, white 70%, var(--main-color));
@@ -265,11 +269,8 @@ header article figure img:hover{
     object-position: top center;
 }
 header  .row .imgs img{
-    width: 250px;  
-    position: relative;
-    background-image: url(../imgs/about.svg);
-    background-repeat: no-repeat;
-    background-position: bottom;
+ max-width: 150px;  
+
 }
 
 
@@ -347,12 +348,16 @@ header  .row .imgs img{
     transform: scale(1.1);
 }
 .products .tab-content .box:hover .layer{
-    top:35%;
+    top:20%;
     bottom:0;
     transition: 1.5s;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
 .products .tab-content .box .layer{
-    top:87%;
+    top:88%;
     width:100%;
     left:0;
 }
@@ -363,6 +368,10 @@ header  .row .imgs img{
 .products .arrow img{
     height:200px;
     transform: rotate(-30deg);
+    
+}
+.products .btn a{
+    display: inline-block;
     
 }
 /* End products  */
